# Social-Gaming-Platform

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
example/client-ncurses/: CMakeLists.txt
example/server/: CMakeLists.txt  chatserver.cpp
include/network/: Server.h
lib/: CMakeLists.txt
lib/networking/: CMakeLists.txt
resource/games/: hello-tree-sitter.game  simple-message.game
src/app/: CMakeLists.txt
src/app/demo/: CMakeLists.txt  demo.cpp
src/app/gameClient/: CMakeLists.txt  gameClient.cpp  newClient.cpp
src/app/gameServer/: CMakeLists.txt  gameServer.cpp
src/lib/: CMakeLists.txt
src/lib/actionNode/: CMakeLists.txt
src/lib/actionNode/control/: InOrderNode.cpp  InParallelNode.cpp
src/lib/actionNode/include/: DummyBucket.h  InOrderNode.h  InParallelNode.h  InputTextNode.h  MessageAllNode.h  Node.h  NodeImpl.h  TimerNode.h
src/lib/actionNode/input/: InputTextNode.cpp
src/lib/actionNode/output/: MessageAllNode.cpp
src/lib/actionNode/timing/: TimerNode.cpp
src/lib/clientHelper/: CMakeLists.txt  clientHelper.cpp  clientHelper.h
src/lib/dataBucket/: CMakeLists.txt  DataBucket.cpp  DataBucket.h
src/lib/game/: CMakeLists.txt  GameInfo.cpp  GameInfo.h  GameScanner.cpp  GameScanner.h
src/lib/gameLogic/: CMakeLists.txt
src/lib/gameLogic/include/: GameController.h  GameModel.h  GameView.h  NodeHelpers.h  Player.h
src/lib/gameLogic/src/: GameController.cpp  GameModel.cpp  GameView.cpp  NodeHelpers.cpp  Player.cpp
src/lib/gameRoom/: CMakeLists.txt  GameParams.cpp  GameRoom.cpp  RoomDeque.cpp  RunningGame.cpp  Setup.cpp
src/lib/gameRoom/include/: GameParams.h  GameRoom.h  RoomDeque.h  RoomState.h  RunningGame.h  Setup.h
src/lib/gameTree/: CMakeLists.txt  ExecutionState.cpp  GameRunner.cpp  NodeActions.cpp  RuleNode.cpp
src/lib/gameTree/include/: ExecutionState.h  GameRunner.h  NodeActions.h  RuleNode.h
src/lib/message/: CMakeLists.txt  StringResources.h  msgCreator.cpp  msgCreator.h  msgParser.cpp  msgParser.h
src/lib/messageProcessor/: CMakeLists.txt  MessageProcessor.cpp  MessageProcessor.h
src/lib/roomCodeGenerator/: CMakeLists.txt  RoomCodeGenerator.cpp  RoomCodeGenerator.h
src/lib/treeSitter/: CMakeLists.txt  Expression.h  NodeVisitor.h  TreeParser.cpp  TreeParser.h  treeSitter.cpp  treeSitter.h
test/: CMakeLists.txt
test/app/gameClient/: gameClient_test.cpp
test/app/gameServer/: gameServer_test.cpp
test/gtest/googletest/include/gtest/: gtest.h
test/gtest/googletest/src/: gtest-death-test.cc  gtest.cc
test/lib/TreeParser/: TreeParser_test.cpp
test/lib/clientHelper/: clientHelper_test.cpp
test/lib/dataBucket/: DataBucket_test.cpp
test/lib/game/: GameManager_test.cpp  Game_test.cpp
test/lib/gameRoom/: GameRoom_test.cpp  GameRunner_test.cpp  Poll_test.cpp
test/lib/gameTree/: GameRunner_test.cpp  RuleNode_test.cpp
test/lib/messageProcessor/: MessageProcessor_test.cpp
test/lib/roomCodeGenerator/: RoomCodeGenerator_test.cpp
