add_subdirectory(treeSitter)
add_subdirectory(gameRoom)
add_subdirectory(message)
add_subdirectory(actionNode)
add_subdirectory(gameLogic)
add_subdirectory(game)
add_subdirectory(dataBucket)
add_subdirectory(messageProcessor)
add_subdirectory(gameTree)
add_subdirectory(roomCodeGenerator)
add_subdirectory(clientHelper)